--- a/test_kocak.html
+++ b/test_kocak.html
@@ -1,103 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Bar with Timer</title>
-    <style>
-        body {
-            background-color: #312441;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Animated Overlay</title>
+  <style>
+    /* Style the overlay */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: none;
+      animation: fadein 0.5s ease-in-out forwards;
+    }
 
-        .container {
-            position: relative;
-            width: 300px;
-            height: 200px;
-        }
-
-        .image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .overlay {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
-            border-radius: 5px;
-            color: white;
-            text-align: center;
-        }
-
-        .progress-bar {
-            width: 80%;
-            height: 20px;
-            background-color: #ccc;
-            border-radius: 5px;
-            margin: 10px auto;
-            position: relative;
-        }
-
-        .progress {
-            width: 0%;
-            height: 100%;
-            border-radius: 5px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: width 0.5s ease; /* Add smooth transition effect */
-        }
-
-        .percentage {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
+    @keyframes fadein {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <img class="image" src="button_style_pixel.png" alt="Button Image">
-        <div class="overlay">
-            <div class="progress-bar">
-                <div class="progress" id="loading-bar"></div>
-            </div>
-            <div class="percentage" id="percentage"></div>
-        </div>
+  <div class="overlay">
     </div>
 
-    <script>
-        const progressBar = document.getElementById('loading-bar');
-        const percentageElement = document.getElementById('percentage');
+  <button onclick="main_button()">Show Overlay</button>
 
-        let progressWidth = 0;
-        const totalTime = 3000; // Change this value for the total loading time (in milliseconds)
-        const increment = 100 / (totalTime / 16);
-
-        function updateProgress() {
-            if (progressWidth < 100) {
-                progressWidth += increment;
-                progressBar.style.width = progressWidth + '%';
-                progressBar.style.backgroundColor = `rgb(76, ${Math.round(progressWidth * 2.55)}, 80)`; // Green color change based on progress
-                percentageElement.textContent = Math.round(progressWidth) + '%';
-                requestAnimationFrame(updateProgress);
-            }
-        }
-
-        window.onload = function () {
-            updateProgress();
-        };
-    </script>
+  <script>
+    function main_button() {
+      const overlay = document.querySelector('.overlay');
+      overlay.style.display = 'flex';
+    }
+  </script>
 </body>
 </html>
